tests/paczka1/fuzzy1/97733540.err
Error in line 11: opZFWc A602 9,0
Error in line 23: 7W8 A602 56,2
Error in line 24: tWE27vcXi A40 31,0
Error in line 27: B7I3 A602 98,3
Error in line 36: B7I3 A969 14,4
